--- a/config/database.yml
+++ b/config/database.yml
@@ -35,8 +35,8 @@ production:
   adapter: sqlite3
   encoding: utf8
   reconnect: false
-  database: beachblog_pics
+  database: db/production.sqlite3
   pool: 5
   username: dsumlin
   password: Snakeeyes12  
-  socket: /tmp/sqlite3.sock
+ # socket: /tmp/sqlite3.sock
