--- a/config/database.yml
+++ b/config/database.yml
@@ -35,8 +35,8 @@ production:
   adapter: sqlite3
   encoding: utf8
   reconnect: false
-  database: db/production.sqlite3
+  database: beachblog_pics
   pool: 5
   username: dsumlin
   password: Snakeeyes12  
- # socket: /tmp/sqlite3.sock
+  socket: /tmp/mysql.sock
