--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,7 @@ test:
   socket: /tmp/mysql.sock
 
 production:
-  adapter: sqlite3
+  adapter: mysql2
   encoding: utf8
   reconnect: false
   database: beachblog_pics
